--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_CONNECTION= "mongodb+srv://suraj90:suraj@123@cluster0.ssj1i.mongodb.net/login?retryWrites=true&w=majority"
+DB_CONNECTION="mongodb+srv://admin:admin@cluster0.ko9v1.mongodb.net/newProfile?retryWrites=true&w=majority"
+
